--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>us.winborn</groupId>
+    <groupId>org.h3</groupId>
     <artifactId>edithash</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>EditHash</name>
-    <description>Modernized version of EditHash Java application</description>
+    <description>Modernized version of Claude Winborn's EditHash Java application</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,11 +19,11 @@
 
     <dependencies>
         <!-- FTP library (to replace com.myjavaworld.ftp) -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-net</artifactId>
-            <version>3.9.0</version>
-        </dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.10.0</version>
+		</dependency>
 
         <!-- Calendar component -->
         <dependency>
