--- a/src/main/java/org/h3/edithash/strings.properties
+++ b/src/main/java/org/h3/edithash/strings.properties
@@ -1,6 +1,6 @@
-aboutItem=About EditHsh
-appName=Edit Hash
-appVersion=1.28 updated June 24, 2015
+aboutItem=About EditHash
+appName=EditHash
+appVersion=2.0.0 Updated March 24, 2025
 calendarH=350
 calendarW=500
 chooserH=420
@@ -8,7 +8,7 @@ chooserTitle=Event For %s, %s %d, %d
 chooserW=525
 chooserX=130
 chooserY=130
-created=Claude Winborn, June 22, 2012
+created=
 defaultAutodown=true
 defaultAutoup=true
 defaultEditHeight=600
